--- a/templates/categories/category.html
+++ b/templates/categories/category.html
@@ -26,20 +26,14 @@
 <li><h1><a href="{{ child.get_absolute_url }}{{ request.urlstate }}">{{ child.get_title }}</h1></a></li>
 {% endfor %}
 </ul>
-{% if profiles %}
-<ul class="profiles"> 
-  {% for profile in profiles %}
-   <li {% if profile.channel.is_online %}class="online"{% else %}class="offline"{% endif %}>
-       <img style="float: left;" src="{% avatar 64 profile.user.username %}" />
-       <img  onclick="javascript:invite('{{ profile.channel.name }}')" class="callbtn" src="{{ MEDIA_URL }}img/call.png"/>
-       <a style="display: block;" href="{{ profile.get_absolute_url }}">
-        <b>{{ profile.display_name }}&nbsp;({% if profile.channel.is_online %}ONLINE{% else %}OFFLINE{% endif %})</b><br/>
-        <span>{{ profile.about }}</span>
-       </a>
-   </li>
-{% endfor %}
-</ul>
-{% else %}
-<p>No users in this category</p>
-{% endif %}
+<div id="profiles">
+</div>
+{% endblock %}
+{% block initscript %}
+function refresh() {
+	$('#profiles').load("{% url profiles category.id %}");
+	setTimeout( refresh, 30000 );
+}
+refresh();
+setTimeout(refresh, 3000);
 {% endblock %}
